refactor: ajustar domínio, mappers e adapters para BigDecimal e fábricas